Fully document the updated gallery plugin.

--- a/gallery_test/entry.html
+++ b/gallery_test/entry.html
@@ -1,6 +1,6 @@
 <div class="thumbnail">
-    <a href="**link**">
-        <img src="**thumb**" width="**width**" height="**height**" alt="Thumbnail Image" title="**title**" />
-        **title**
+    <a href="<% link %>">
+        <img src="<% thumb %>" width="<% width %>" height="<% height %>" alt="Thumbnail Image" title="<% title %>" />
+        <% title %>
     </a>
 </div>
